# diskrate

./: diskrate.cabal
src/: Rates.hs
src/Disk/: Analyze.hs  Input.hs
